[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Интерфейсы/Кнопки/Начальное меню/Кнопка 2.png" type="Texture" id=1]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Начальное меню/Кнопка 2 нажата.png" type="Texture" id=2]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Главное меню нажата.png" type="Texture" id=3]
[ext_resource path="res://UI/Интерфейсы/Кнопки/Кнопки паузы/Главное меню.png" type="Texture" id=4]
[ext_resource path="res://Kill.gd" type="Script" id=5]
[ext_resource path="res://UI/Шрифты/vcrosdmonorusbyd.ttf" type="DynamicFontData" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Fade_In"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 0.353553 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.447059 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="ControlСМерть" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade_In" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade_In"]
anims/Fade_In = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Control" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -40.0
margin_right = 68.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
text = "ВЫ СДОХЛИ "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Главное меню" type="TextureButton" parent="Control"]
margin_left = 101.0
margin_top = 110.0
margin_right = 225.0
margin_bottom = 133.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Кнопка Начать новую игру" type="TextureButton" parent="Control"]
margin_left = 101.0
margin_top = 86.0
margin_right = 225.0
margin_bottom = 107.159
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Главное меню" to="Control" method="_on___pressed"]
[connection signal="pressed" from="Control/Кнопка Начать новую игру" to="Control" method="_on_____pressed"]
